--- a/sell.html
+++ b/sell.html
@@ -49,7 +49,7 @@
         <div class="col-lg-8">
             <div class="page-content">
             <!-- Bootstrap form from https://www.w3schools.com/bootstrap/bootstrap_forms.asp -->
-            <form id="sell-form" class="form-horizontal" action="" method="post" onsubmit="return validateInput()">
+            <form id="sell-form" class="form-horizontal" action="" method="post" onsubmit="populate(); return false;">
                 <div class="form-group" >
                     <label class="control-label col-sm-2" for="category">Category:</label>
                     <div class="col-sm-8">          
@@ -122,16 +122,17 @@
                 <div class="form-group">   
                     <label class="control-label col-sm-2" for="desc">Description:</label>
                     <div class="col-sm-8">
-                        <textarea class="form-control" id="desc"></textarea>
+                        <textarea class="form-control" id="desc" maxlength="250"></textarea>
                     </div>
                 </div>
-                <div class="form-group">   
+                <div class="form-group">
                     <label class="control-label col-sm-2 d-inline" for="price">Price:</label>
-                    <div class="col-sm-3 ">
-                        <input class="form-control"  id="price" type="number" step="0.01" min="1" max="1000" required onchange="validPrice()"></input><br>
+                    <div class="col-3">
+                        <input class="form-control"  id="price" type="number" step="0.01" min="1" max="1000" required onchange="validPrice()"></input>
+                        <small style="color: red" id="youearnError"></small><br>
                     </div> 
-                    <label class="control-label col-sm-2 d-inline" for="youearn">You Will Earn:</label>
-                    <div class="col-sm-3">
+                    <div class="col-3">
+                        <label class="control-label" for="youearn">You Will Earn:</label>
                         <input disabled="true" class="form-control"  id="youearn" ></input>
                     </div>
                 </div>
@@ -141,6 +142,8 @@
                     </div>
                 </div>
             </form>
+            <div id="createdItems">
+            </div>
             </div>
         </div>
     </div>
