--- a/assign4/src/index.html
+++ b/assign4/src/index.html
@@ -18,7 +18,7 @@
   <!--Source: Bootstrap Nav Bar from https://getbootstrap.com/docs/4.4/components/navbar/ -->   
   <header>
   <nav class="navbar navbar-default navbar-expand-md">
-        <a class="navbar-brand" href="index.php">HoosThrifting</a>
+        <a class="navbar-brand" href="http://localhost/hoos-thrifting/php/sell.php">HoosThrifting</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                         <i class="fas fa-bars"></i>        
                 </button>
